[package]
name = "dag-scheduler"
version = "0.6.0"
edition = "2021"
description = "a scheduler of dag computation graph"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam="0.8.4"
rand = "0.8"
once_cell="1.19.0"